namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-prisoner-finance-general-ledger-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-prisoner-finance-general-ledger-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-prisoner-finance"
    cloud-platform.justice.gov.uk/slack-alert-channel: "hmpps-prisoner-finance-alerts-nonprod"
    cloud-platform.justice.gov.uk/application: "Prisoner Finance General Ledger"
    cloud-platform.justice.gov.uk/owner: "Prisoner Finance: digital-prisoner-finance@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-prisoner-finance-general-ledger-api"
    cloud-platform.justice.gov.uk/team-name: "hmpps-prisoner-finance"
